--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 FirePower : 5 <br>
                 Accuracy : .7 <br>
 
-z
+
 
                 </div>
 
@@ -43,7 +43,7 @@ z
             
         </div>
 
-
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
